styles/css/charadex.css
/* ... */
/* ------------------------------------------------------------- */
/* Scrollbar
/* ------------------------------------------------------------- */
@media (min-width: 992px) {
  body::-webkit-scrollbar-track {
    background-color: rgba(var(--bs-light), 0.2);
    border-width: 0px !important;
  }

  body::-webkit-scrollbar {
    width: 10px;
    height: 10px;
  }

  body::-webkit-scrollbar-thumb {
    background-color: var(--cd-primary-color);
  }

  body::-webkit-scrollbar-corner,
  body::-webkit-resizer {
    background-color: var(--cd-border-color);
  }
}

/* ------------------------------------------------------------- */
/* Inactive field
/* ------------------------------------------------------------- */
/* Adds a lockpad to 'inactive' character fields marked FALSE    */
[data-cd-bool="false"] {
  opacity: .5;
}
[data-cd-bool="false"]::before {
  display: inline-block;
  font-style: normal;
  font-variant: normal;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  font-family: "Font Awesome 5 Free";
  font-weight: 900;
  content: "\f023";
  margin-right: 0.3rem;
}

/* ------------------------------------------------------------- */
/* Containers
/* ------------------------------------------------------------- */
#main-content {
  padding: 0;
  -ms-flex: 1 1 auto !important;
  flex: 1 1 auto !important;
}

#main-card {
  overflow: scroll;
  scroll-behavior: smooth;
  padding: 1em 1.5em 1em .5em;
}

#sidebar {
  width: 100%;
}

@media (min-width: 768px) {
  #main-content {
    padding: 0;
    max-width: 800px;
  }

  #main-card {
    height: 65vh;
  }

  #sidebar, #stars {
    width: 200px;
  }
}
/* Small container for more compact view */
.container {
  max-width: 950px !important;
}

/* ------------------------------------------------------------- */
/* Navbar
/* ------------------------------------------------------------- */
.navbar {
  font-family: var(--cd-font-header);
  text-transform: var(--cd-header-transform);
  z-index: 2000;
}

/* Navbar "Brand" aka title/logo */
.navbar .navbar-brand {
  color: var(--bs-primary);
  font-size: var(--cd-header-max-size);
  font-weight: bold;
  transition: color 0.2s ease-in-out;
}

.navbar .navbar-brand:hover,
.navbar .navbar-brand:focus {
  color: var(--bs-secondary);
}

@media (min-width: 768px) {
  .navbar .navbar-brand {
    font-size: calc(1.4rem + 1.5vw);
  }
}

/* Navbar Links */
.navbar .navbar-nav .nav-link, .nav.nav-pills .nav-item .nav-link {
  color: var(--bs-dark);
  font-size: 1.5em;
  font-weight: bold;
}

.navbar .navbar-nav .nav-link:hover,
.navbar .navbar-nav .nav-link:focus,
.nav.nav-pills .nav-item .nav-link:hover,
.nav.nav-pills .nav-item .nav-link:focus {
  color: var(--bs-link-hover-color);
}

.navbar .navbar-nav .nav-link.disabled,
.nav.nav-pills .nav-item .nav-link.disabled {
  color: var(--bs-tertiary-color) ;
}

.nav .nav-item {
  font-family: var(--cd-font-header);
  margin-bottom: 0 !important;
  padding-left: 0 !important;
}

.nav-pills .nav-item .nav-link.active {
  background-color: transparent;
  color: var(--bs-light);
}
.nav-pills .nav-link.active::before {
  content: "✦";
}

/* Navbar Dropdowns */
.dropdown-menu {
  color: var(--bs-link-color) !important;
  background-color: var(--bs-body-bg) !important;
  border: var(--bs-border-color) var(--bs-border-style) var(--bs-border-width);
  border-radius: var(--bs-border-radius) !important;
}

.dropdown-menu .dropdown-header {
  color: var(--bs-body-color) !important;
}

.dropdown-item, .dropdown-menu .nav-item {
  color: var(--bs-body-color) !important;
  transition: color 0.2s ease-in-out;
}

.dropdown-item:hover,
.dropdown-item:focus,
.dropdown-item:active,
.dropdown-item.selected,
.dropdown-menu .nav-item:hover,
.dropdown-menu .nav-item:focus,
.dropdown-menu .nav-item:active {
  color: var(--bs-primary) !important;
}

.dropdown-menu .nav-item .nav-link {
  font-size: 1em;
  padding-left: 1em;
}

.navbar .dropdown-divider {
  border-top: var(--bs-border-color) var(--bs-border-style) var(--bs-border-width) !important;
  width: 100%;
  padding: 0;
}

/* ------------------------------------------------------------- */
/* Various Text Styling
/* ------------------------------------------------------------- */
hr {
  border-radius: var(--bs-border-radius);
}

blockquote {
  color: var(--bs-secondary);
  border-left: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);
  margin: .5em 0 1em 1em;
  padding: 0 0 0 1em;
}

.text-justify {
  text-align: justify !important;
}

/* Headers */
h1, h2, h3, h4, h5, h6 {
  color: var(--bs-secondary);
  font-family: var(--cd-font-header);
  font-weight: bold;
  text-transform: var(--cd-header-transform);
}

h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
  text-decoration: none; /* remove header url underline */
}

.span-header { /* in-line 'header' */
  font-family: var(--cd-font-header);
  font-weight: bold;
  text-transform: var(--cd-header-transform);
}

.subtitle {
  font-family: var(--cd-fond-header);
  font-weight: bold;
  color: var(--bs-gray);
  font-size: var(--cd-header-min-size);
  text-align: center;
  margin-bottom: 0.5rem;
}

/* ------------------------------------------------------------- */
/* Bullets
/* ------------------------------------------------------------- */
ul {
  list-style-type: "✦";
}
ul li::marker {
  color: var(--bs-secondary) !important;
}

ol li::marker {
  color: var(--bs-primary);
  font-family: var(--cd-font-header);
}

#charadex-profile ul li, #charadex-profile ol li,
#main-card ul li, #main-card ol li {
  margin-bottom: 0.5em;
  padding-left: 0.5em;
}

/* ------------------------------------------------------------- */
/* Tooltips
/* ------------------------------------------------------------- */
.tooltip {
  z-index: 10000 !important;
}
.tooltip.show {
  opacity: 1 !important;
}

.cd-tooltip {
  /* only applies to tooltips with data-bs-custom-class="cd-tooltip" */
  --bs-tooltip-bg: var(--bs-primary);
  --bs-tooltip-color: var(--bs-white);
}
/* ... */

